# platform.core.api.notification

./: AUTHORS  CMakeLists.txt  notification-service.pc.in  notification.manifest  notification.pc.in  notification_DB_init.sh
TC/: config
TC/testcase/: tslist  utc_notification.c  utc_notification_list.c  utc_notification_setting.c  utc_notification_status.c
debian/: changelog  control  libnotification-0.postinst.in  rules
doc/: notification_doc.h
doc/wearable/: notification_doc.h
include/: notification.h  notification_db.h  notification_debug.h  notification_error.h  notification_group.h  notification_internal.h  notification_ipc.h  notification_list.h  notification_noti.h  notification_ongoing.h  notification_ongoing_flag.h  notification_permission.h  notification_private.h  notification_setting.h  notification_setting_internal.h  notification_setting_service.h  notification_status.h  notification_status_internal.h  notification_text_domain.h  notification_type.h
packaging/: notification.changes  notification.spec
src/: notification.c  notification_db.c  notification_error.c  notification_group.c  notification_init.c  notification_internal.c  notification_ipc.c  notification_list.c  notification_noti.c  notification_old.c  notification_ongoing.c  notification_permission.c  notification_setting.c  notification_setting_service.c  notification_status.c
test-app/: CMakeLists.txt  main.c
